# relf

./: CMakeLists.txt  README.md
ExampleElf64Parser/: main.c
src/: main.c
src/include/: relf.c  relf.h
src/include/datastructs/: erros.h  structs.h
